# Custom-CLAP

./: .gitignore  README.md  env_cpu.yml  env_cuda.yml  experiments.ipynb  pyproject.toml
clap/: __init__.py  clap_trainer.py  training.py  utils.py
clap/configs/: clap_cnn14_distilroberta-base_v1.yml  clap_cnn14_distilroberta-base_v2.yml  clap_cnn14_distilroberta-base_vTestDistillation.yml  clap_cnn14_roberta.yml  clap_htsat-base_roberta-base_v2.yml  clap_htsat-base_roberta-large_vTestDistillation.yml  clap_htsat-large_roberta-large_vTestDistillation.yml  clap_htsat-tiny_gpt2-large_vTestDistillation.yml  clap_htsat-tiny_gpt2-medium_v1.yml  clap_htsat-tiny_gpt2-medium_vTestDistillation.yml  clap_htsat-tiny_gpt2_v1.yml  clap_htsat-tiny_gpt2_v2.yml  clap_htsat-tiny_gpt2_vTestDistillation.yml  clap_htsat-tiny_roberta-base_v1.yml  clap_htsat-tiny_roberta-base_vTestDistillation.yml  clap_htsat-tiny_roberta-large_v1.yml  clap_htsat-tiny_roberta-large_v2.yml  clap_htsat-tiny_roberta-large_v3.yml  clap_htsat-tiny_roberta-large_vTestDistillation.yml  cnn14_test.yml  config_test.yml
clap/datasets/: __init__.py  audio_dataset.py  audio_datasets.py  audio_processor.py  audiocaps.py  clap_dataset.py  clotho.py  esc50.py  text_datasets.py
clap/metrics/: __init__.py  (+2 more)
examples/: fine-tuned_classification.ipynb  fine-tuning.ipynb  fine-tuning.py  finetuning.ipynb  retrieval.ipynb  stage1_training.py  stage2_training.py  staged_training.ipynb  training.ipynb  training.py  zero-shot_classification.ipynb  zero_shot_classification.ipynb
scripts/: stage1_training.sh  stage2_training .sh
(+61 files in other folders)
